--- a/app/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,7 +31,21 @@
         android:id="@+id/nav_theme"
         android:name="com.example.app.ui.themes.theme.ThemeFragment"
         tools:layout="@layout/fragment_theme">
+
+        <action
+            android:id="@+id/action_nav_theme_to_nav_exercise"
+            app:destination="@id/nav_exercise">
+
+            <argument
+                android:name="exerciseName"
+                app:argType="string" />
+        </action>
     </fragment>
+
+    <fragment
+        android:id="@+id/nav_exercise"
+        android:name="com.example.app.ui.themes.exercise.ExerciseFragment"
+        tools:layout="@layout/fragment_exercise" />
 
     <fragment
         android:id="@+id/nav_profile"
