--- a/app/app/src/main/res/layout/nav_header_main.xml
+++ b/app/app/src/main/res/layout/nav_header_main.xml
@@ -51,14 +51,20 @@
             android:text="{amaterno}"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
     </LinearLayout>
-
-    <TextView
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="{cuatri°} Cuatrimestre" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Matrícula: {matricula}"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Matrícula: "/>
+
+        <TextView
+            android:id="@+id/user_matricula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="{matricula}" />
+    </LinearLayout>
 </LinearLayout>
