--- a/app/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_themes">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.app.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_admin"
+        android:name="com.example.app.ui.admin.AdminFragment"
+        android:label="Administración"
+        tools:layout="@layout/fragment_admin" />
 
     <fragment
         android:id="@+id/nav_themes"
