--- a/app/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,14 +5,14 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
             android:id="@+id/nav_themes"
             android:title="Temario" />
         <item
             android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_default_profile"
             android:title="Perfil" />
+        <item
+            android:id="@+id/nav_admin"
+            android:title="Administración"/>
     </group>
 </menu>
