--- a/app/app/src/main/res/layout/fragment_query.xml
+++ b/app/app/src/main/res/layout/fragment_query.xml
@@ -10,6 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:queryHint="Buscar por nombre o ID"/>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0px"
@@ -20,43 +27,6 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:id="@+id/item_1"
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rounded_box"
-                    android:backgroundTint="@color/Greeuttec"
-                    android:padding="16dp"
-                    android:layout_margin="8dp">
-
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="0px"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="32dp"
-                            android:text="{id}"
-                            android:paddingRight="8dp"/>
-
-                        <TextView
-                            android:layout_width="0px"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="{item_name}"
-                            android:gravity="center_vertical"/>
-                    </LinearLayout>
-                    <ImageView
-                        android:id="@+id/trash_1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_trash"/>
-                </LinearLayout>
             </LinearLayout>
         </ScrollView>
         <Button
@@ -65,12 +35,5 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="agregar"/>
-
-        <Button
-            android:id="@+id/btn_clear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="limpiar [prueba]"/>
     </LinearLayout>
 </FrameLayout>
