--- a/app/app/src/main/res/layout/fragment_item.xml
+++ b/app/app/src/main/res/layout/fragment_item.xml
@@ -6,10 +6,27 @@
     tools:context=".ui.admin.query.items.ItemFragment">
 
     <LinearLayout
-        android:id="@+id/linear_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp">
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/linear_layout"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="16dp">
+        </LinearLayout>
+        <TextView
+            android:id="@+id/output"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Guardar" />
     </LinearLayout>
 </FrameLayout>
