--- a/app/app/src/main/res/layout/fragment_themes.xml
+++ b/app/app/src/main/res/layout/fragment_themes.xml
@@ -10,41 +10,11 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/themes_layout"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="16dp">
-
-            <TextView
-                android:id="@+id/theme_1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:padding="16dp"
-                android:textSize="32dp"
-                android:textColor="@color/white"
-                android:background="@drawable/rounded_box"
-                android:backgroundTint="@color/Greeuttec"
-                android:layout_marginBottom="16dp"
-                android:text="Pensamiento Abstracto [prueba]" />
-
-            <TextView
-                android:id="@+id/theme_2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:padding="16dp"
-                android:textSize="32dp"
-                android:textColor="@color/white"
-                android:background="@drawable/rounded_box"
-                android:backgroundTint="@color/Greeuttec"
-                android:layout_marginBottom="16dp"
-                android:text="Resolución de problemas [prueba]" />
-
-            <TextView
-                android:id="@+id/log"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
