--- a/app/app/src/main/res/layout/fragment_theme.xml
+++ b/app/app/src/main/res/layout/fragment_theme.xml
@@ -24,14 +24,18 @@
 
                 <TextView
                     android:id="@+id/theme_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:gravity="center"
-                    android:layout_margin="16dp"
                     android:textSize="24dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     android:text="{themeName}"
+                    android:ellipsize="end"
                     android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"/>
+                    android:layout_columnWeight="1"
+                    android:singleLine="false"
+                    android:maxLines="4"/>
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -66,7 +70,7 @@
             </GridLayout>
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="128dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp">
 
                 <LinearLayout
@@ -78,7 +82,8 @@
                         android:id="@+id/theme_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Descripción: {themeDescription}"/>
+                        android:maxLines="8"
+                        android:text="{themeDescription}"/>
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
